🔧 Remove deprecated files and scripts for Synthos platform
✅ Deleted obsolete configuration files, deployment scripts, and test scripts that are no longer needed for the Synthos project. This cleanup enhances project maintainability and reduces clutter, ensuring a more streamlined development environment. Key files removed include buildspec.yml, deploy scripts, Docker configurations, and various test scripts related to database and Redis connections.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
-# Synthos Backend Dockerfile
+# Synthos Backend Dockerfile - Optimized for Google Cloud Run
 # Multi-stage build for production optimization
 
 # =============================================================================
 # STAGE 1: Build stage with dependencies
 # =============================================================================
-FROM python:3.11-bullseye as builder
+FROM python:3.11-slim as builder
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -12,7 +12,7 @@ ENV PYTHONUNBUFFERED=1
 ENV PIP_NO_CACHE_DIR=1
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 
-# Install system dependencies with retry mechanism
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
@@ -30,14 +30,15 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # =============================================================================
-# STAGE 2: Production stage
+# STAGE 2: Production stage optimized for Cloud Run
 # =============================================================================
-FROM python:3.11-bullseye as production
+FROM python:3.11-slim as production
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PATH="/opt/venv/bin:$PATH"
+ENV PORT=8080
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
@@ -65,15 +66,15 @@ RUN mkdir -p /app/logs /app/uploads /app/exports && \
 # Switch to non-root user
 USER synthos
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+# Health check for Cloud Run
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT:-8080}/health || exit 1
 
-# Expose port
-EXPOSE 8000
+# Expose port (Cloud Run uses PORT env var)
+EXPOSE 8080
 
-# Default command (App Runner compatible)
-CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 2"]
+# Cloud Run optimized command
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080} --workers 1 --access-log"]
 
 # =============================================================================
 # DEVELOPMENT STAGE (optional)
@@ -91,4 +92,4 @@ RUN pip install debugpy ipdb
 USER synthos
 
 # Development command with auto-reload
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"] 
