--- a/frontend/frontend.env
+++ b/frontend/frontend.env
@@ -17,7 +17,7 @@ NEXT_PUBLIC_APP_NAME=Synthos
 # Backend API URL - REQUIRED
 # Development: http://localhost:8000
 # Production: https://synthos-alb-production-1411529388.us-east-1.elb.amazonaws.com/
-NEXT_PUBLIC_API_URL=https://synthos-alb-production-1411529388.us-east-1.elb.amazonaws.com
+NEXT_PUBLIC_API_URL=https://your-backend-domain
 # WebSocket URL for real-time features
 NEXT_PUBLIC_WS_URL=wss://synthos-alb-production-1411529388.us-east-1.elb.amazonaws.com/ws
 # ===================================================================
@@ -29,7 +29,7 @@ NODE_ENV=development
 # STRIPE CONFIGURATION (Client-side)
 # ===================================================================
 # Stripe publishable key (safe to expose to browser)
-NEXT_PUBLIC_STRIPE_PUBLIC_KEY=pk_test_your_stripe_publishable_key
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 # ===================================================================
 # MONITORING & ANALYTICS
 # ===================================================================
