--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -86,6 +86,18 @@ pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 
 # =============================================================================
+# GOOGLE CLOUD INTEGRATIONS (NEW)
+# =============================================================================
+# Google Cloud Storage client
+google-cloud-storage==2.18.2
+# Vertex AI / Model Garden
+google-cloud-aiplatform==1.70.0
+# Auth helpers
+google-auth==2.35.0
+# Cloud SQL Connector (PostgreSQL)
+cloud-sql-python-connector[asyncpg,pg8000]==1.9.2
+
+# =============================================================================
 # AI/ML DEPENDENCIES (OPTIONAL - INSTALL ONLY IF NEEDED)
 # These packages are large and may cause build timeouts
 # They will be installed with best effort, failures are acceptable
