✨ Add user authentication endpoints and enhance payment configuration
✅ Introduced new user signup and signin endpoints to facilitate user registration and authentication. Enhanced payment configuration in the environment file to support Paddle and Stripe as payment providers. Updated database connection handling to ensure proper encoding of credentials. Refactored health check logic and temporarily disabled certain middleware for debugging purposes. Improved error handling and user feedback in the frontend authentication flow.

--- a/backend/backend.env.example
+++ b/backend/backend.env.example
@@ -40,3 +40,52 @@ VERTEX_API_KEY=AQ.Ab8RN6L0q3lhGtgv0YnPKcwQPhb3mUjTCQIumlnt9VCLrmDX_A
 # Optional third-party providers
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
+
+# Paddle Payment Configuration
+PADDLE_VENDOR_ID=your-paddle-vendor-id
+PADDLE_VENDOR_AUTH_CODE=your-vendor-auth-code
+PADDLE_PUBLIC_KEY=pdl_sdbx_apikey_01jzp3tskdwzpasb56pxfjy5wc_WjyxfT2Q32Jzp0hAQv4YQt_AKv
+PADDLE_WEBHOOK_SECRET=your-webhook-secret
+PADDLE_ENVIRONMENT=production
+
+
+# Payment Provider Configuration
+PRIMARY_PAYMENT_PROVIDER=paddle
+ENABLE_MULTIPLE_PAYMENT_PROVIDERS=true
+
+
+# Stripe (for backup payment processing)
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+
+# File Storage - Railway's filesystem for MVP (migrate to Cloudflare R2 later)
+UPLOAD_PATH=/app/uploads
+
+# App Runner Configuration
+PORT=8000
+HOST=0.0.0.0
+EXPORT_PATH=/app/exports
+
+
+
+# API Configuration
+API_V1_STR=/api/v1
+
+
+
+
+# Limits
+FREE_TIER_MONTHLY_LIMIT=10000
+MAX_SYNTHETIC_ROWS=5000000
+
+# CORS Configuration for Vercel frontend
+CORS_ORIGINS=https://synthos.dev,https://synthos-dev.vercel.app,http://localhost:3000
+ALLOWED_HOSTS=*
+
+# App Runner Configuration  
+PORT=8000
+HOST=0.0.0.0
+
+
+# Pricing Tiers (JSON format for backend processing)
+PRICING_TIERS='{"starter": {"price": 99, "stripe_price_id": "price_starter_monthly", "paddle_product_id": "pro_01jzp36tyrsdg91hprxx47zhwb"}, "professional": {"price": 599, "stripe_price_id": "price_professional_monthly", "paddle_product_id": "pro_01jzp3ds3cj4y0x9y53ftcmmkk"}, "growth": {"price": 1299, "stripe_price_id": "price_growth_monthly", "paddle_product_id": "pro_01jzp3gcsceh34w3jvyyn68rhr"}}'
+
