--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 # =============================================================================
-# SYNTHOS BACKEND DEPENDENCIES - OPTIMIZED FOR GOOGLE CLOUD RUN
-# Python 3.11 Compatible - Production Ready
+# SYNTHOS BACKEND DEPENDENCIES - OPTIMIZED FOR AWS APP RUNNER
+# Python 3.8 Compatible - Production Ready
 # =============================================================================
 
 # Core FastAPI Framework (ESSENTIAL - Install first)
@@ -13,41 +13,96 @@ pydantic[email]==2.5.2
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 alembic==1.13.1
+asyncpg==0.29.0
+aiosqlite==0.20.0
 
 # Authentication & Security (ESSENTIAL)
-python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+PyJWT==2.8.0
+python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
+itsdangerous==2.1.2
+slowapi==0.1.9
 
-# Google Cloud Services (ESSENTIAL for GCP deployment)
-google-cloud-storage==2.18.2
-google-cloud-aiplatform==1.70.0
-google-auth==2.35.0
-cloud-sql-python-connector[asyncpg,pg8000]==1.9.2
+# Email & Templates (ESSENTIAL)
+email-validator==2.1.0.post1
+jinja2==3.1.3
 
-# HTTP & API (ESSENTIAL)
-httpx==0.25.2
-requests==2.31.0
+# Redis & Caching (ESSENTIAL)
+redis==5.0.1
+aioredis==2.0.1
 
-# Data Processing (ESSENTIAL)
-pandas==2.1.4
-numpy==1.24.4
+# Background Tasks (ESSENTIAL)
+celery==5.3.4
 
-# AI/ML Libraries (ESSENTIAL)
-openai==1.3.7
-anthropic==0.7.8
+# AWS Services (ESSENTIAL)
+boto3==1.34.34
+botocore==1.34.34
 
-# Environment & Configuration (ESSENTIAL)
-python-dotenv==1.0.0
-
-# CORS & Middleware (ESSENTIAL)
-fastapi-cors==0.0.6
+# AI/ML APIs (ESSENTIAL)
+anthropic==0.8.1
+openai==1.12.0
 
 # Monitoring & Logging (ESSENTIAL)
+sentry-sdk[fastapi]==1.40.6
 structlog==23.2.0
-sentry-sdk[fastapi]==1.40.0
+python-json-logger==3.1.0
 
-# Development & Testing (OPTIONAL - Remove in production)
+# Payment Processing (ESSENTIAL)
+stripe==7.12.0
+
+# Data Processing (CORE ONLY - LIGHTWEIGHT)
+pandas==2.1.4
+numpy==1.24.3
+scipy==1.11.4
+
+# File Handling (ESSENTIAL)
+aiofiles==24.1.0
+openpyxl==3.1.2
+
+# HTTP Clients (ESSENTIAL)
+httpx==0.26.0
+requests==2.31.0
+aiohttp==3.9.1
+
+# Environment & Configuration (ESSENTIAL)
+python-decouple==3.8
+python-dotenv==1.0.1
+
+# Time Handling (ESSENTIAL)
+pytz==2024.1
+
+# System Monitoring (ESSENTIAL)
+psutil==5.9.8
+prometheus_client==0.19.0
+
+# Data Validation (ESSENTIAL)
+marshmallow==3.20.2
+sqlparse==0.4.4
+
+# Testing Dependencies (ESSENTIAL)
 pytest==7.4.3
+pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 
+# =============================================================================
+# AI/ML DEPENDENCIES (OPTIONAL - INSTALL ONLY IF NEEDED)
+# These packages are large and may cause build timeouts
+# They will be installed with best effort, failures are acceptable
+# =============================================================================
+
+# Uncomment these lines only if AI/ML features are required:
+# torch==2.1.2+cpu --find-links https://download.pytorch.org/whl/torch_stable.html
+# transformers==4.37.2
+# scikit-learn==1.3.2
+
+# =============================================================================
+# LIGHTWEIGHT ALTERNATIVES (OPTIONAL)
+# These provide similar functionality with smaller footprint
+# =============================================================================
+
+# For basic ML tasks without PyTorch:
+# scikit-learn==1.3.2
+
+# For text processing without transformers:
+# nltk==3.8.1 
