--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,6 +42,10 @@ botocore==1.34.34
 # AI/ML APIs (ESSENTIAL)
 anthropic==0.8.1
 openai==1.12.0
+python-json-logger==3.1.0
+
+
+
 
 # Monitoring & Logging (ESSENTIAL)
 sentry-sdk[fastapi]==1.40.6
