--- a/backend-go/cloudbuild.yaml
+++ b/backend-go/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/synthos-backend-go:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/synthos-backend-go:$BUILD_ID', '.']
     dir: 'backend-go'
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/synthos-backend-go:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/synthos-backend-go:$BUILD_ID']
 
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -16,9 +16,9 @@ steps:
       - 'deploy'
       - 'synthos-backend-go'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/synthos-backend-go:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/synthos-backend-go:$BUILD_ID'
       - '--region'
-      - 'us-central1'
+      - 'europe-north2'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
@@ -32,13 +32,25 @@ steps:
       - '0'
       - '--max-instances'
       - '10'
+      - '--env-vars-file'
+      - 'cloudrun.env'
       - '--set-env-vars'
-      - 'PORT=8080,ENVIRONMENT=production'
-      - '--set-cloudsql-instances'
-      - '$PROJECT_ID:us-central1:synthos-db'
+      - 'ENVIRONMENT=production,STORAGE_PROVIDER=gcs,GCS_BUCKET=synthos'
+      - '--set-secrets'
+      - 'JWT_SECRET_KEY=synthos-jwt-secret:latest,ENCRYPTION_KEY=synthos-secret-key:latest,DB_PASSWORD=synthos-db-password:latest,VERTEX_API_KEY=synthos-vertex-api-key:latest'
+      - '--update-env-vars'
+      - 'REDIS_URL=redis://10.101.118.43:6379/0'
+      - '--vpc-connector'
+      - 'connector-eu-n2'
+      - '--vpc-egress'
+      - 'all-traffic'
+      - '--remove-env-vars'
+      - 'PORT,HOST'
+      - '--update-env-vars'
+      - 'DATABASE_URL=postgresql://postgres:Genovo-2025@34.51.200.158:5432/synthos?sslmode=require'
 
 images:
-  - 'gcr.io/$PROJECT_ID/synthos-backend-go:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/synthos-backend-go:$BUILD_ID'
 
 options:
   logging: CLOUD_LOGGING_ONLY
