🔧 Update Cloud Build configuration and enhance secret management
✅ Modified the Cloud Build configuration to streamline environment variable management by replacing multiple `--set-env-vars` with a single secret reference. Updated the application to load configuration from a mounted Secret Manager file, improving security and flexibility in handling sensitive information.

--- a/backend-go/cloudbuild.yaml
+++ b/backend-go/cloudbuild.yaml
@@ -32,22 +32,12 @@ steps:
       - '0'
       - '--max-instances'
       - '10'
-      - '--env-vars-file'
-      - 'cloudrun.env'
-      - '--set-env-vars'
-      - 'ENVIRONMENT=production,STORAGE_PROVIDER=gcs,GCS_BUCKET=synthos'
       - '--set-secrets'
-      - 'JWT_SECRET_KEY=synthos-jwt-secret:latest,ENCRYPTION_KEY=synthos-secret-key:latest,DB_PASSWORD=synthos-db-password:latest,VERTEX_API_KEY=synthos-vertex-api-key:latest'
-      - '--update-env-vars'
-      - 'REDIS_URL=redis://10.101.118.43:6379/0'
+      - 'Synthos_backend=/etc/secrets/Synthos_backend:latest'
       - '--vpc-connector'
       - 'connector-eu-n2'
       - '--vpc-egress'
       - 'all-traffic'
-      - '--remove-env-vars'
-      - 'PORT,HOST'
-      - '--update-env-vars'
-      - 'DATABASE_URL=postgresql://postgres:Genovo-2025@34.51.200.158:5432/synthos?sslmode=require'
 
 images:
   - 'gcr.io/$PROJECT_ID/synthos-backend-go:$BUILD_ID'
